# md2pt_jp

./: .gitignore  CHANGELOG.md  README.md  input.md  output.txt  pyproject.toml
md2pt_jp/: cli.py  converter.py
tests/: test_converter.py
