[project]
name = "md2pt-jp"
version = "0.1.0"
description = "Convert Markdowned text to Plain text Jpanese version"
authors = [
    {name = "takesobt",email = "takeshi.obata@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

